[Java] Remove `MappedResizeableBuffer` to avoid having to open internal JDK module (i.e. `--add-opens java.base/sun.nio.ch=ALL-UNNAMED`).