@@ -217,8 +217,6 @@ subprojects {
     }
 
     test {
-        jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
-
         if (buildJavaVersion >= 21) {
             jvmArgs('-XX:+EnableDynamicAgentLoading')
         }
